chore: install OpenAI SDK for text summarization

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ PORT=3000
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database_name?appName=cluster
 JWT_SECRET=your-secret-jwt-key-change
 JWT_EXPIRES_IN=7d
+OPENAI_API_KEY=sk-proj-your-openai-api-key-here
